# legal_document_analyzer

./: .gitignore  api.py  create_test_docx.py  legal_doc_ui.py  pyproject.toml  test_api.py  test_rental_agreement.docx  test_rental_agreement.txt
ingestion/: DataIngestor.py  tnrrrlt_act_2017_extracted.json
src/: DocumentAnalyzer.py  LegalAnalyst.py  Orchestrator.py  Retriever.py  State.py  logger_config.py  main.py
